build.log
main.cpp
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp: In function 'std::string getCurrentMangaPath()':
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp:613:13: error: 'arraychapter' was not declared in this scope
  613 |         if (arraychapter.empty()) return "";
      |             ^~~~~~~~~~~~
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp:614:36: error: 'arraychapter' was not declared in this scope
  614 |         const std::string& first = arraychapter[0];
      |                                    ^~~~~~~~~~~~
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp: In function 'void close()':
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp:729:27: warning: comparison of integer expressions of different signedness: 'int' and 'std::vector<LTexture>::size_type' {aka 'long unsigned int'} [-Wsign-compare]
  729 |         for (int x = 0; x < arraypage.size(); x++)
      |                         ~~^~~~~~~~~~~~~~~~~~
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp: In function 'int main(int, char**)':
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp:1173:51: warning: comparison of integer expressions of different signedness: 'int' and 'std::vector<std::__cxx11::basic_string<char> >::size_type' {aka 'long unsigned int'} [-Wsign-compare]
 1173 |                                 if (selectchapter < arraymain.size() - 1)
      |                                     ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp:1343:56: warning: comparison of integer expressions of different signedness: 'int' and 'std::vector<std::__cxx11::basic_string<char> >::size_type' {aka 'long unsigned int'} [-Wsign-compare]
 1343 |                                         if (selectpage < arraychapter.size() - 1)
      |                                             ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp:1572:51: warning: comparison of integer expressions of different signedness: 'int' and 'std::vector<LTexture>::size_type' {aka 'long unsigned int'} [-Wsign-compare]
 1572 |                                 for (int x = 0; x < arraypage.size(); x++)
      |                                                 ~~^~~~~~~~~~~~~~~~~~
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp:1633:67: warning: comparison of integer expressions of different signedness: 'int' and 'std::vector<std::__cxx11::basic_string<char> >::size_type' {aka 'long unsigned int'} [-Wsign-compare]
 1633 |                                                 if (selectchapter < arraymain.size() - 1)
      |                                                     ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp:1824:67: warning: comparison of integer expressions of different signedness: 'int' and 'std::vector<LTexture>::size_type' {aka 'long unsigned int'} [-Wsign-compare]
 1824 |                                                 for (int x = 0; x < arraypage.size(); x++)
      |                                                                 ~~^~~~~~~~~~~~~~~~~~
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp:1883:72: warning: comparison of integer expressions of different signedness: 'int' and 'std::vector<std::__cxx11::basic_string<char> >::size_type' {aka 'long unsigned int'} [-Wsign-compare]
 1883 |                                                         if (selectpage < arraychapter.size() - 1)
      |                                                             ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp:2065:51: warning: comparison of integer expressions of different signedness: 'int' and 'std::vector<LTexture>::size_type' {aka 'long unsigned int'} [-Wsign-compare]
 2065 |                                 for (int x = 0; x < arraypage.size(); x++)
      |                                                 ~~^~~~~~~~~~~~~~~~~~
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp:2231:43: warning: comparison of integer expressions of different signedness: 'int' and 'std::vector<std::__cxx11::basic_string<char> >::size_type' {aka 'long unsigned int'} [-Wsign-compare]
 2231 |                         for (int x = 0; x < arraymain.size(); x++) {
      |                                         ~~^~~~~~~~~~~~~~~~~~
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp:1123:13: warning: unused variable 'kUp' [-Wunused-variable]
 1123 |         u64 kUp = padGetButtonsUp(&pad);
      |             ^~~
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp:1068:13: warning: unused variable 'cascadesize' [-Wunused-variable]
 1068 |         int cascadesize = 0;
      |             ^~~~~~~~~~~
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp: In function 'std::string gethtml(std::string)':
C:/Users/marila/Documents/Projetos/CuteManga/source/main.cpp:867:1: warning: control reaches end of non-void function [-Wreturn-type]
  867 | }
      | ^
make[1]: *** [/opt/devkitpro/devkitA64/base_rules:16: main.o] Error 1
make: *** [Makefile:189: build] Error 2
